MemoryMosaic/wwwroot/css/components/LibraryContentViewer.css
h1 {
    position: absolute;
    top: 40%;
    left: 50%;
    transform: translate(-50%, -50%);
    width: 100%;
    text-align: center;
    user-select: none;
}

#libContentViewer {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    position: absolute;
    left: 145px;
    top: 60px;
}

#libContentViewer > .spanAndRow {
    display: flex;
    flex-direction: column;
    margin-right: 25px;
}

#libContentViewer > .spanAndRow > span {
    font-size: 16px;
    margin-bottom: 4px;
}

#libContentViewer > .spanAndRow > .row {
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    margin-bottom: 20px;
}

#libContentViewer > .spanAndRow > .row > .thumbnail > .star-icon {
    position: absolute;
    left: 8px;
    bottom: 10px;
}

#libContentViewer > .spanAndRow > .row > .thumbnail > .video-icon {
    position: absolute;
    right: 8px;
    top: 10px;
    pointer-events: none;
}

#libContentViewer > .spanAndRow > .row > .thumbnail > .checkbox {
    opacity: 0;
    position: absolute;
    margin-top: 8px;
    margin-left: 8px;
    transition: 0.3s;
}

#libContentViewer > .spanAndRow > .row > .thumbnail > .checked {
    color: #009FFF;
    opacity: 1;
}

#libContentViewer > .spanAndRow > .row > .thumbnail > img {
    height: 200px;
}

#libContentViewer > .spanAndRow > .row > .thumbnail {
    position: relative; /* https://stackoverflow.com/a/12365963 */
    cursor: pointer;
    margin-right: 5px;
}

#libContentViewer > .spanAndRow > .row > .thumbnail:hover > .unchecked { /* Show checkbox on hover */
    opacity: 0.42;
}

#libContentViewer > .spanAndRow > .row > .thumbnail > .unchecked:hover {
    opacity: 1;
}

#moreContentTopDiv {
    background-color: transparent;
    outline: 10px solid red;
    width: available;
    width: -moz-available;
    height: 600px;
    position: absolute;
    z-index: 800;
}

#moreContentBottomDiv {
    background-color: transparent;
    outline: 10px solid blue;
    width: available;
    width: -moz-available;
    height: 600px;
    position: absolute;
    z-index: 800;
    bottom: -200px;
}

#downloadDivBackground {
    position: absolute;
    top: 0;
    left: 0;
    height: 100%;
    width: 100%;
    background: rgba(72, 71, 71, 0.41);
}

#downloadDivBackground > #downloadDiv {
    position: absolute;
    left: 50%;
    top: 50%;
    transform: translate(-50%, -50%);
    z-index: 9999;
    width: 200px;
    height: 200px;
    background-color: black;
    border: 2px solid white;
    border-radius: 8px;
    display: flex;
    flex-direction: column;
    align-items: center;
    align-content: center;
    justify-content: center;
    word-wrap: break-word;
}

#downloadDivBackground > #downloadDiv > a {
    text-align: center;
    margin-left: 10px;
    margin-right: 10px;
    user-select: none;
}

#downloadDivBackground > #downloadDiv > button {
    position: absolute;
    bottom: 4px;
    right: 4px;
}

